force-app/main/default/objects/Inventory__c/Inventory__c.object-meta.xml
<CustomObject>
    <label>Inventory</label>
    <nameField>
        <displayFormat>II-{00000000}</displayFormat>
        <label>Inventory ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>