force-app/main/default/objects/Inventory__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location.</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Inventories</relationshipLabel>
    <relationshipName>Inventories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>