force-app/main/default/objects/Inventory__c/fields/Locked_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Locked_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Locked Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>