force-app/main/default/objects/Inventory__c/fields/Unique_inventory_combination__c.field-meta.xml
<CustomField>
    <fullName>Unique_inventory_combination__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is generated by a flow: &quot;Update field unique combination on Inventory b4 save&quot;</description>
    <label>Unique inventory combination</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>