force-app/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unique_inventory_combination__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>