force-app/main/default/objects/Inventory__c/listViews/TCL_Inventory_record_Owner_Inventory.listView-meta.xml
<ListView>
    <fullName>TCL_Inventory_record_Owner_Inventory</fullName>
    <filterScope>Queue</filterScope>
    <label>TCL - Inventory record Owner</label>
    <queue>TCL_Inventory_record_Owner</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>